@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.323.2.29 2007-02-27 10:48:57 martin Exp $
+# $Id: CHANGES,v 1.323.2.30 2007-02-27 12:08:00 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,9 @@
 # --
 
 2.1.6 (2007/02/27)
+ - (2007/02/27) fixed bug #1581 - Garbled paths containing domain names
+ - (2007/02/27) updated Mail::Tools from 1.60 to 1.75 - fixed bug #1642 -
+    Cant get mails via PostmasterPop3.pl - Unrecognised line
  - (2007/02/27) fixed bug #1545 - Wrong Variableusage in $Self->{PageShown}
     (Kernel/Modules/AgentTicketMailbox.pm)
  - (2007/02/26) fixed bug #1291 - Download link in SysConfig skips config
